# waveguides

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-01-core-vectorization-consolidation.md  2026-07-01-vectorize-waveguide-eval.md
docs/superpowers/specs/: 2026-07-01-core-vectorization-consolidation-design.md  2026-07-01-vectorize-waveguide-eval-design.md
src/waveguides/: __init__.py  bessel_zeros.py  core.py  heavy_computation.py  utils.py
tests/: test_vectorized_eval.py
tools/: generate_bessel_zeros.py
